--- a/package.json
+++ b/package.json
@@ -1,24 +1,64 @@
 {
-  "name": "novac.finance",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.35",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.4",
-    "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6",
-    "typescript": "4.6.4"
-  }
+	"name": "novac.finance",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"prettier": "prettier -c -w .",
+		"release": "standard-version",
+		"release:major": "yarn run release --release-as major --no-verify",
+		"release:minor": "yarn run release --release-as minor --no-verify",
+		"release:patch": "yarn run release --release-as patch --no-verify",
+		"release:alpha": "yarn run release --prerelease alpha --no-verify",
+		"release:beta": "yarn run release --prerelease beta --no-verify",
+		"prepare:husky": "npx husky install && npx husky add .husky/pre-commit \"npx --no-install lint-staged\" && npx husky add .husky/commit-msg \"npx commitlint --edit $1\"",
+		"postinstall": "yarn prepare:husky"
+	},
+	"lint-staged": {
+		"*.{tsx,ts,json}": [
+			"eslint . --fix",
+			"prettier --write .",
+			"pretty-quick --staged"
+		]
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged",
+			"commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+		}
+	},
+	"dependencies": {
+		"next": "12.1.6",
+		"react": "18.1.0",
+		"react-dom": "18.1.0"
+	},
+	"devDependencies": {
+		"@commitlint/cli": "^16.2.1",
+		"@commitlint/config-conventional": "^16.2.1",
+		"@types/node": "17.0.35",
+		"@types/react": "18.0.9",
+		"@types/react-dom": "18.0.4",
+		"eslint": "8.15.0",
+		"eslint-config-next": "12.1.6",
+		"typescript": "4.6.4",
+		"@typescript-eslint/eslint-plugin": "^5.12.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-config-standard": "^17.0.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-jsx": "^0.1.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-promise": "^6.0.0",
+		"eslint-plugin-react": "^7.29.4",
+		"eslint-plugin-react-hooks": "^4.5.0",
+		"eslint-plugin-standard": "^5.0.0",
+		"eslint-plugin-testing-library": "^5.3.1",
+		"prettier": "^2.6.2",
+		"husky": "^7.0.4",
+		"lint-staged": "^12.3.7",
+		"pretty-quick": "^3.1.3",
+		"standard-version": "^9.3.2"
+	}
 }
