fix: removing files
Signed-off-by: Higor Alves <higorhaalves@gmail.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,11 +1,11 @@
 version: 2
 updates:
-  - package-ecosystem: "npm"
-    directory: "/"
+  - package-ecosystem: 'npm'
+    directory: '/'
     schedule:
-      interval: "weekly"
-      day: "sunday"
+      interval: 'weekly'
+      day: 'sunday'
     commit-message:
-      prefix: "dependabot"
-      include: "scope"
-    target-branch: "main"
+      prefix: 'dependabot'
+      include: 'scope'
+    target-branch: 'main'
