--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
 		"release:patch": "yarn run release --release-as patch --no-verify",
 		"release:alpha": "yarn run release --prerelease alpha --no-verify",
 		"release:beta": "yarn run release --prerelease beta --no-verify",
-		"prepare:husky": "npx husky install && npx husky add .husky/pre-commit \"npx --no-install lint-staged\" && npx husky add .husky/commit-msg \"npx commitlint --edit $1\"",
-		"postinstall": "yarn prepare:husky"
+		"prepare:husky": "npx husky install && npx husky add .husky/pre-commit \"npx --no-install lint-staged\" && npx husky add .husky/commit-msg \"npx commitlint --edit $1\""
 	},
 	"lint-staged": {
 		"*.{tsx,ts,json}": [
@@ -36,8 +35,8 @@
 		"react-dom": "18.1.0"
 	},
 	"devDependencies": {
-		"@commitlint/cli": "^16.2.1",
-		"@commitlint/config-conventional": "^16.2.1",
+		"@commitlint/cli": "^17.0.0",
+		"@commitlint/config-conventional": "^17.0.0",
 		"@types/node": "17.0.35",
 		"@types/react": "18.0.9",
 		"@types/react-dom": "18.0.4",
@@ -56,7 +55,7 @@
 		"eslint-plugin-standard": "^5.0.0",
 		"eslint-plugin-testing-library": "^5.3.1",
 		"prettier": "^2.6.2",
-		"husky": "^7.0.4",
+		"husky": "^8.0.1",
 		"lint-staged": "^12.3.7",
 		"pretty-quick": "^3.1.3",
 		"standard-version": "^9.3.2"
