--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
 		}
 	},
 	"dependencies": {
+		"@mantine/core": "^4.2.5",
+		"@mantine/hooks": "^4.2.5",
+		"@mantine/next": "^4.2.5",
+		"firebase": "^9.8.1",
 		"next": "12.1.6",
 		"react": "18.1.0",
 		"react-dom": "18.1.0"
@@ -40,10 +44,9 @@
 		"@types/node": "17.0.35",
 		"@types/react": "18.0.9",
 		"@types/react-dom": "18.0.4",
+		"@typescript-eslint/eslint-plugin": "^5.12.0",
 		"eslint": "8.15.0",
 		"eslint-config-next": "12.1.6",
-		"typescript": "4.6.4",
-		"@typescript-eslint/eslint-plugin": "^5.12.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-config-standard": "^17.0.0",
 		"eslint-plugin-import": "^2.26.0",
@@ -54,10 +57,11 @@
 		"eslint-plugin-react-hooks": "^4.5.0",
 		"eslint-plugin-standard": "^5.0.0",
 		"eslint-plugin-testing-library": "^5.3.1",
-		"prettier": "^2.6.2",
 		"husky": "^8.0.1",
 		"lint-staged": "^12.3.7",
+		"prettier": "^2.6.2",
 		"pretty-quick": "^3.1.3",
-		"standard-version": "^9.3.2"
+		"standard-version": "^9.3.2",
+		"typescript": "4.6.4"
 	}
 }
