--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
 		"firebase": "^9.8.1",
 		"next": "12.1.6",
 		"react": "18.1.0",
-		"react-dom": "18.1.0"
+		"react-dom": "18.1.0",
+		"react-icons": "^4.3.1",
+		"react-lottie": "^1.2.3"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.0.0",
@@ -44,6 +46,7 @@
 		"@types/node": "17.0.35",
 		"@types/react": "18.0.9",
 		"@types/react-dom": "18.0.4",
+		"@types/react-lottie": "^1.2.6",
 		"@typescript-eslint/eslint-plugin": "^5.12.0",
 		"eslint": "8.15.0",
 		"eslint-config-next": "12.1.6",
