--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	},
 	"dependencies": {
 		"@mantine/core": "^4.2.5",
+		"@mantine/form": "^4.2.6",
 		"@mantine/hooks": "^4.2.5",
 		"@mantine/next": "^4.2.5",
 		"firebase": "^9.8.1",
