--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
 		"@mantine/hooks": "^4.2.5",
 		"@mantine/next": "^4.2.5",
 		"firebase": "^9.8.1",
+		"firebase-admin": "^10.2.0",
 		"next": "12.1.6",
+		"next-firebase-auth": "^1.0.0-canary.9",
 		"react": "18.1.0",
 		"react-dom": "18.1.0",
 		"react-icons": "^4.3.1",
