--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
 	},
 	"dependencies": {
 		"@mantine/core": "^4.2.5",
+		"@mantine/dropzone": "^4.2.9",
 		"@mantine/form": "^4.2.6",
-		"@mantine/hooks": "^4.2.5",
+		"@mantine/hooks": "^4.2.9",
 		"@mantine/next": "^4.2.5",
 		"firebase": "^9.8.1",
 		"firebase-admin": "^10.2.0",
