--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
 	},
 	"dependencies": {
 		"@mantine/core": "^4.2.5",
+		"@mantine/dates": "^4.2.9",
 		"@mantine/dropzone": "^4.2.9",
 		"@mantine/form": "^4.2.6",
 		"@mantine/hooks": "^4.2.9",
 		"@mantine/next": "^4.2.5",
+		"dayjs": "^1.11.3",
 		"firebase": "^9.8.1",
 		"firebase-admin": "^10.2.0",
 		"next": "12.1.6",
@@ -42,7 +44,8 @@
 		"react": "18.1.0",
 		"react-dom": "18.1.0",
 		"react-icons": "^4.3.1",
-		"react-lottie": "^1.2.3"
+		"react-lottie": "^1.2.3",
+		"tabler-icons-react": "^1.49.0"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.0.0",
